Bug 340936 - Cannot mousewheel to change tabs
Summary: Cannot mousewheel to change tabs
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: Git
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-11-13 18:38 UTC by Kai Uwe Broulik
Modified: 2015-10-08 10:51 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kai Uwe Broulik 2014-11-13 18:38:14 UTC
[kate from frameworks git]

Mouse wheeling the tabs in Kate does not switch between them.

Reproducible: Always

Steps to Reproduce:
1. Open multiple documents
2. Mousewheel the tab bar
3.

Actual Results:  
Nothing happens

Expected Results:  
It switches between tabs like any other tab bar.
Comment 1 Kai Uwe Broulik 2014-11-13 18:58:42 UTC
Re-assigning to ktexteditor framework since it's KateViewInternal::wheelEvent(QWheelEvent *) which does it wrong, it just checks for delta() larger or smaller than zero causing the slightest finger movement to trigger a line-scroll.
I looked into QAbstractScrollArea and the like code to find out how Qt internally handles it (especially with the Shift faster scroll), applications that do not override the scroll behavior like Konsole work fine but I did not find any clue there.
Comment 2 Christoph Cullmann 2015-06-08 19:22:26 UTC
Git commit a9f1d69e21c431b120c39969b2e1dba47d595638 by Christoph Cullmann.
Committed on 08/06/2015 at 19:21.
Pushed by cullmann into branch 'master'.

let QScrollBar handle the WheelEvents

M  +22   -115  src/view/kateviewinternal.cpp
M  +0    -10   src/view/kateviewinternal.h

http://commits.kde.org/ktexteditor/a9f1d69e21c431b120c39969b2e1dba47d595638
Comment 3 Christoph Cullmann 2015-06-08 19:22:43 UTC
Btw., that doesn't fix the tabbar issue at all ;=)
Comment 4 Christoph Cullmann 2015-06-08 19:47:10 UTC
The tab bar thingy is a kate application bug.
Comment 5 Dominik Haumann 2015-10-08 10:51:47 UTC
Git commit 841be3ec8f55a933c991b2300eb2ef15e8b4c4a6 by Dominik Haumann.
Committed on 08/10/2015 at 10:51.
Pushed by dhaumann into branch 'master'.

fix bug #340936: Can not mousewheel on tabbar to change tabs
CHANGELOG: fix bug #340936: Can not mousewheel on tabbar to change tabs

M  +15   -0    kate/src/katetabbar.cpp
M  +3    -0    kate/src/katetabbar.h

http://commits.kde.org/kate/841be3ec8f55a933c991b2300eb2ef15e8b4c4a6