fix bug #340936: Can not mousewheel on tabbar to change tabs

BUG: 340936
CHANGELOG: fix bug #340936: Can not mousewheel on tabbar to change tabs